--- a/client/wfnews-war/src/main/angular/src/index.html
+++ b/client/wfnews-war/src/main/angular/src/index.html
@@ -5,7 +5,7 @@
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
-    <title>WFIM Incident Management</title>
+    <title>WFNEWS News</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,7 +15,7 @@
 
     <link href="assets/splash-screen/style.css" rel="stylesheet">
     <script src="assets/splash-screen/index.js"></script>
-    <script>SPLASH_SCREEN.show( { title: 'INCIDENT MANAGER' } )</script>
+    <script>SPLASH_SCREEN.show( { title: 'NEWS' } )</script>
 </head>
 
 <body>
