--- a/client/wfnews-war/src/main/webapp/index.html
+++ b/client/wfnews-war/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Wildfire Incident Management</title>
+<title>Wildfire News</title>
 </head>
 <body>
 
