rename to wfnews

--- a/client/wfnews-war/src/main/angular/src/refresh-token.html
+++ b/client/wfnews-war/src/main/angular/src/refresh-token.html
@@ -33,7 +33,7 @@
                     token_type: parameterMap.token_type
                 }
 
-                window.localStorage.setItem("wfim-incidents-token", JSON.stringify(token));
+                window.localStorage.setItem("wfnews-token", JSON.stringify(token));
                 self.close();
             }
         }
