--- a/client/wfnews-war/src/main/webapp/index.html
+++ b/client/wfnews-war/src/main/webapp/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="ISO-8859-1">
 <title>Wildfire News</title>
 </head>
 <body>
 
-	<b>This is the index.</b>
+	<strong>This is the index.</strong>
 
 </body>
 </html>
