--- a/client/wfnews-war/src/main/angular/src/assets/js/wfml-v0.3.1/v0.3.1/app/testbed/index.html
+++ b/client/wfnews-war/src/main/angular/src/assets/js/wfml-v0.3.1/v0.3.1/app/testbed/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Wildfire Map Lib Testbed</title>
@@ -132,7 +132,7 @@
             </div>
 
             <div class='search-bar'>
-                Maximum: 
+                Maximum:
                 <label class="search-number">Distance <select id='search-max-distance'>
                     <option value="50">50 km</option>
                     <option value="100">100 km</option>
@@ -150,7 +150,7 @@
             </div>
 
             <div>
-                Anchor <input type='text' id='search-anchor-txt'>                
+                Anchor <input type='text' id='search-anchor-txt'>
             </div>
             <div class='search-bar'>
                 <button id='search-clear'>Clear</button>
@@ -159,9 +159,9 @@
                 <button id='search-set-pt'>Set From Map</button>
             </div>
             <div>
-                Place <input type='text' id='search-txt-place'> 
+                Place <input type='text' id='search-txt-place'>
             </div>
-            <table id='search-item-place' class='search-list'>
+            <table id='search-item-place' class='search-list' aria-label="Search Table">
                 <tr>
                     <th class='search-item-name'>Name</th>
                     <th class='search-item-type'>Centre;Type</th>
@@ -173,7 +173,7 @@
                 Road <input type='text' id='search-txt-road'>
                 And <input type='text' id='search-txt-intersection'>
             </div>
-            <table id='search-item-road' class='search-list'>
+            <table id='search-item-road' class='search-list' aria-label="Search Table">
                 <tr>
                 <th class='search-item-name'>Name</th>
                 <th class='search-item-dist'>Dist</th>
@@ -182,7 +182,7 @@
 
             </table>
 
-            <table id='search-item-intersection' class='search-list'>
+            <table id='search-item-intersection' class='search-list' aria-label="Search Table">
                 <tr>
                 <th class='search-item-name'>Name</th>
                 <th class='search-item-dist'>Dist</th>
@@ -196,14 +196,14 @@
             <h2>ROF</h2>
 
             <div>
-                <button id='load-rof'>Load RoF markers</button> 
-                <label>Count:<input type="text" id="count-rof" value="100" style="width:30px; text-align:right"></label> 
+                <button id='load-rof'>Load RoF markers</button>
+                <label>Count:<input type="text" id="count-rof" value="100" style="width:30px; text-align:right"></label>
             <div>
                 <label><input type="checkbox" id="cluster-rof"  checked>Cluster</label>
             </div>
             <div>
                 <label><input type="checkbox" id="show-rof" disabled checked>Show markers</label>
-                <button id='remove-rof' disabled>Remove markers</button> 
+                <button id='remove-rof' disabled>Remove markers</button>
             </div>
 
             <h2>Incident</h2>
@@ -264,7 +264,7 @@
             .then( function ( data ) {
                 LAYER_CONFIG = data
                 $(document).ready(init);
-            } )            
+            } )
 
         var tabs = new Tab();
         tabs.show('layers');
@@ -372,7 +372,7 @@
             });
             mapapi.callback.extentChange(function() {
                 var extent = mapapi.map.extent();
-                var txt = '[ ' 
+                var txt = '[ '
                 + WFML.Location.format( [ extent[0], extent[1] ] )
                 + "  "
                 + WFML.Location.format( [ extent[2], extent[3] ] )
@@ -413,7 +413,7 @@ function filterActiveFires(id, features) {
         f.properties.DiscoveryDate = val;
     }
     return features;
-}   
+}
 
         //  =====================================  TESTING...
 
