--- a/client/wfnews-war/src/main/angular/src/assets/js/wfml-v0.4.0/unittest/daterange.html
+++ b/client/wfnews-war/src/main/angular/src/assets/js/wfml-v0.4.0/unittest/daterange.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <link rel="stylesheet" href="lib/qunit.css">
     <script src="lib/qunit.js"></script>
