Check token, add FSR

--- a/client/wfnews-war/src/main/angular/src/index.html
+++ b/client/wfnews-war/src/main/angular/src/index.html
@@ -23,4 +23,12 @@
     </app-root>
 </body>
 
+<template id="wf-weather-station-feature-template">
+  <div class="wf-weather-station-feature">
+      <div class="smk-bespoke-content"
+          v-content="content"
+      ></div>
+  </div>
+</template>
+
 </html>
