Initial panel display

--- a/client/wfnews-war/src/main/angular/src/index.html
+++ b/client/wfnews-war/src/main/angular/src/index.html
@@ -39,4 +39,10 @@
   </div>
 </template>
 
+<template id="wf-incident-feature-template">
+  <div class="wf-incident-feature">
+    <div class="smk-bespoke-content" v-content="content"></div>
+  </div>
+</template>
+
 </html>
