--- a/client/wfnews-war/src/main/angular/src/index.html
+++ b/client/wfnews-war/src/main/angular/src/index.html
@@ -24,6 +24,29 @@
     <link href="assets/splash-screen/style.css" rel="stylesheet">
     <script src="assets/splash-screen/index.js"></script>
     <script>SPLASH_SCREEN.show( { title: 'NEWS' } )</script>
+    <!-- Snowplow starts plowing - Standalone vE.2.14.0 -->
+    <script type="text/javascript">
+      ;(function(p,l,o,w,i,n,g){if(!p[i]){p.GlobalSnowplowNamespace=p.GlobalSnowplowNamespace||[];
+      p.GlobalSnowplowNamespace.push(i);p[i]=function(){(p[i].q=p[i].q||[]).push(arguments)
+      };p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
+      n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,"script","https://www2.gov.bc.ca/StaticWebResources/static/sp/sp-2-14-0.js","snowplow"));
+      var collector = 'spm.apps.gov.bc.ca';
+      window.snowplow('newTracker','rt',collector, {
+        appId: 'BCWS-WFNEWS',
+        cookieLifetime: 86400 * 548,
+        platform: 'web',
+        post: true,
+        forceSecureTracker: true,
+        contexts: {
+        webPage: true,
+        performanceTiming: true
+        }
+      });
+      window.snowplow('enableActivityTracking', 30, 30); // Ping every 30 seconds after 30 seconds
+      window.snowplow('enableLinkClickTracking');
+      window.snowplow('trackPageView');
+    </script>
+  <!-- Snowplow stops plowing -->
 </head>
 
 <body>
