--- a/client/wfnews-war/src/main/angular/src/index.html
+++ b/client/wfnews-war/src/main/angular/src/index.html
@@ -23,6 +23,7 @@
 
     <link href="assets/splash-screen/style.css" rel="stylesheet">
     <script src="assets/splash-screen/index.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script>SPLASH_SCREEN.show( { title: 'NEWS' } )</script>
     <!-- Snowplow starts plowing - Standalone vE.2.14.0 -->
     <script type="text/javascript">
