--- a/client/wfnews-war/src/main/angular/src/index.html
+++ b/client/wfnews-war/src/main/angular/src/index.html
@@ -43,8 +43,8 @@
         performanceTiming: true
         }
       });
-      // window.snowplow('enableActivityTracking', 30, 30); // Ping every 30 seconds after 30 seconds
-      // window.snowplow('enableLinkClickTracking');
+      window.snowplow('enableActivityTracking', 30, 30); // Ping every 30 seconds after 30 seconds
+      window.snowplow('enableLinkClickTracking');
       // window.snowplow('trackPageView');
     </script>
   <!-- Snowplow stops plowing -->
